deps/LAGraph/include/LAGraph.h


#define LAGRAPH_DATE "Feb 20, 2025"
#define LAGRAPH_VERSION_MAJOR  1
#define LAGRAPH_VERSION_MINOR  1
#define LAGRAPH_VERSION_UPDATE 5
#define LAGRAPH_INVALID_GRAPH                   (-1000)
#define LAGRAPH_CACHE_NOT_NEEDED                ( 1000)
#define LAGRAPH_UNKNOWN (-1)
typedef enum
{
    LAGraph_ADJACENCY_UNDIRECTED = 0, 
    LAGraph_ADJACENCY_DIRECTED = 1,   
    LAGraph_KIND_UNKNOWN = LAGRAPH_UNKNOWN  
}
LAGraph_Kind ;
struct LAGraph_Graph_struct
{
    GrB_Matrix  A ;         
    LAGraph_Kind kind ;     
    GrB_Matrix AT ; 
    GrB_Vector out_degree ; 
    GrB_Vector in_degree ;  
    LAGraph_Boolean is_symmetric_structure ;    
    int64_t nself_edges ; 
    GrB_Scalar emin ;   
    LAGraph_State emin_state ;
    GrB_Scalar emax ;   
    LAGraph_State emax_state ;
} ;
typedef struct LAGraph_Graph_struct *LAGraph_Graph ;
LAGRAPH_PUBLIC
int LAGraph_Init
(
    char *msg
) ;
LAGRAPH_PUBLIC
int LAGraph_Version
(
    int version_number [3], 
    char *version_date,     
    char *msg
) ;
LAGRAPH_PUBLIC
int LAGraph_Finalize
(
    char *msg
) ;
LAGRAPH_PUBLIC
int LAGraph_New
(
    LAGraph_Graph *G,   
    GrB_Matrix    *A,   
    LAGraph_Kind kind,  
    char *msg
) ;
LAGRAPH_PUBLIC
int LAGraph_Delete
(
    LAGraph_Graph *G,   
    char *msg
) ;
LAGRAPH_PUBLIC
int LAGraph_DeleteCached
(
    LAGraph_Graph G,    
    char *msg
) ;
LAGRAPH_PUBLIC
int LAGraph_Cached_AT
(
    LAGraph_Graph G,    
    char *msg
) ;
LAGRAPH_PUBLIC
int LAGraph_Cached_IsSymmetricStructure
(
    LAGraph_Graph G,    
    char *msg
) ;
LAGRAPH_PUBLIC
int LAGraph_Cached_OutDegree
(
    LAGraph_Graph G,    
    char *msg
) ;
LAGRAPH_PUBLIC
int LAGraph_Cached_InDegree
(
    LAGraph_Graph G,    
    char *msg
) ;
LAGRAPH_PUBLIC
int LAGraph_Cached_NSelfEdges
(
    LAGraph_Graph G,    
    char *msg
) ;
LAGRAPH_PUBLIC
int LAGraph_Cached_EMin
(
    LAGraph_Graph G,    
    char *msg
) ;
LAGRAPH_PUBLIC
int LAGraph_Cached_EMax
(
    LAGraph_Graph G,    
    char *msg
) ;
LAGRAPH_PUBLIC
int LAGraph_DeleteSelfEdges
(
    LAGraph_Graph G,    
    char *msg
) ;
LAGRAPH_PUBLIC
int LAGr_Init
(
    GrB_Mode mode,      
    void * (* user_malloc_function  ) (size_t),
    void * (* user_calloc_function  ) (size_t, size_t),
    void * (* user_realloc_function ) (void *, size_t),
    void   (* user_free_function    ) (void *),
    char *msg
) ;