graph/src/graph/graphblas/lagraph_bindings.rs

unsafe extern "C" {
    #[doc = " LAGraph_Version: determines the version of LAGraph.  The version number and\n date can also be obtained via compile-time constants from LAGraph.h.\n However, it is possible to compile a user application that includes one\n version of LAGraph.h and then links with another version of the LAGraph\n library later on, so the version number and date may differ from the\n compile-time constants.\n\n The LAGraph_Version method allows the library itself to be queried, after it\n is linked in with the user application.\n\n The version_number array is set to LAGRAPH_VERSION_MAJOR,\n LAGRAPH_VERSION_MINOR, and LAGRAPH_VERSION_UPDATE, in that order.  The\n LAGRAPH_DATE string is copied into the user-provided version_date string,\n and is null-terminated.\n\n @param[out] version_number   an array of size 3; with the major, minor,\n      and update versions of LAGraph, in that order.\n @param[out] version_date     an array of size >= LAGraph_MSG_LEN, returned\n      with the date of this version of LAGraph.\n @param[in,out] msg   any error messages.\n\n @retval GrB_SUCCESS if successful.\n @retval GrB_NULL_POINTER if version_number or version_date are NULL."]
    pub fn LAGraph_Version(
        version_number: *mut ::std::os::raw::c_int,
        version_date: *mut ::std::os::raw::c_char,
        msg: *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " LAGraph_Finalize: finish LAGraph and GraphBLAS.  Must be called as the last\n LAGraph method.  It calls GrB_finalize and frees any LAGraph objects created\n by @sphinxref{LAGraph_Init} or @sphinxref{LAGr_Init}.  After calling this\n method, no LAGraph or GraphBLAS methods may be used.\n\n @param[in,out] msg   any error messages.\n\n @retval GrB_SUCCESS if successful.\n @returns any GraphBLAS errors that may have been encountered."]
    pub fn LAGraph_Finalize(msg: *mut ::std::os::raw::c_char) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " LAGraph_New: creates a new graph G.  The cached properties G->AT,\n G->out_degree, and G->in_degree are set to NULL, and scalar cached\n properties are set to LAGRAPH_UNKNOWN.\n\n @param[out] G        handle to the newly created graph, as &G.\n @param[in,out] A     adjacency matrix.  A is moved into G as G->A, and A\n                      itself is set to NULL to denote that is now a part of\n                      G.  That is, { G->A = A ; A = NULL ; } is performed.\n                      When G is deleted, G->A is freed.  If A is NULL, the\n                      graph is invalid until G->A is set.\n @param[in] kind      the kind of graph to create.  This may be\n                      LAGRAPH_UNKNOWN, which must then be revised later\n                      before the graph can be used.\n @param[in,out] msg   any error messages.\n\n @retval GrB_SUCCESS if successful.\n @retval GrB_NULL_POINTER if G is null.\n @returns any GraphBLAS errors that may have been encountered."]
    pub fn LAGraph_New(
        G: *mut LAGraph_Graph,
        A: *mut GrB_Matrix,
        kind: LAGraph_Kind,
        msg: *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " LAGraph_Delete: frees a graph G.  The adjacency matrix G->A and the cached\n properties G->AT, G->out_degree, and G->in_degree are all freed.\n\n @param[in,out] G     handle to the graph to be free. *G is NULL on output.\n                      To keep G->A while deleting the graph G, use:\n                      { A = G->A ; G->A = NULL ; LAGraph_Delete (&G, msg) ; }\n @param[in,out] msg   any error messages.\n\n @retval GrB_SUCCESS if successful.\n @returns any GraphBLAS errors that may have been encountered."]
    pub fn LAGraph_Delete(
        G: *mut LAGraph_Graph,
        msg: *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " LAGraph_DeleteCached: frees all cached properies of a graph G.  The graph is\n still valid.  This method should be used if G->A changes, since such changes\n will normally invalidate G->AT, G->out_degree, and/or G->in_degree.\n\n @param[in,out] G     handle to the graph to modified.  The graph G remains\n                      valid on output, but with all cached properties freed.\n                      G may be NULL, in which case nothing is done.\n @param[in,out] msg   any error messages.\n\n @retval GrB_SUCCESS if successful.\n @returns any GraphBLAS errors that may have been encountered."]
    pub fn LAGraph_DeleteCached(
        G: LAGraph_Graph,
        msg: *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " LAGraph_Cached_AT: constructs G->AT, the transpose of G->A.  This matrix is\n required by some of the algorithms.  Basic algorithms may construct G->AT if\n they require it.  The matrix G->AT is then available for subsequent use.  If\n G->A changes, G->AT should be freed and recomputed.  If G->AT already\n exists, it is left unchanged (even if it is not equal to the transpose of\n G->A).  As a result, if G->A changes, G->AT should be explictly freed.\n\n @param[in,out] G     graph for which G->AT is computed.\n @param[in,out] msg   any error messages.\n\n @retval GrB_SUCCESS if successful.\n @retval GrB_NULL_POINTER if G is NULL.\n @retval LAGRAPH_CACHE_NOT_NEEDED if G->kind is LAGraph_ADJACENCY_UNDIRECTED.\n @retval LAGRAPH_INVALID_GRAPH if G is invalid (G->A missing, or G->kind\n      not a recognized kind).\n @returns any GraphBLAS errors that may have been encountered."]
    pub fn LAGraph_Cached_AT(
        G: LAGraph_Graph,
        msg: *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " LAGraph_Cached_IsSymmetricStructure: determines if the sparsity structure of\n G->A is symmetric (ignoring its values).  If G->kind denotes that the graph\n is undirected, this cached property is implicitly true (and not checked).\n Otherwise, this method determines if the structure of G->A for a directed\n graph G has a symmetric sparsity structure.  No work is performed if the\n cached property is already known.\n\n @param[in,out] G     graph for which G->is_symmetric_structure is computed.\n @param[in,out] msg   any error messages.\n\n @retval GrB_SUCCESS if successful.\n @retval GrB_NULL_POINTER if G is NULL.\n @retval LAGRAPH_INVALID_GRAPH if G is invalid (G->A missing, or G->kind\n      not a recognized kind).\n @returns any GraphBLAS errors that may have been encountered."]
    pub fn LAGraph_Cached_IsSymmetricStructure(
        G: LAGraph_Graph,
        msg: *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " LAGraph_Cached_OutDegree: computes G->out_degree.  No work is performed if\n it already exists in G.\n\n @param[in,out] G     graph for which G->out_degree is computed.\n @param[in,out] msg   any error messages.\n\n @retval GrB_SUCCESS if successful.\n @retval GrB_NULL_POINTER if G is NULL.\n @retval LAGRAPH_INVALID_GRAPH if G is invalid (G->A missing, or G->kind\n      not a recognized kind).\n @returns any GraphBLAS errors that may have been encountered."]
    pub fn LAGraph_Cached_OutDegree(
        G: LAGraph_Graph,
        msg: *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " LAGraph_Cached_InDegree computes G->in_degree.  No work is performed if it\n already exists in G.  If G is undirected, G->in_degree is never computed and\n remains NULL (the method returns LAGRAPH_CACHE_NOT_NEEDED).  No work is\n performed if it is already exists in G.\n\n Performance note: for SuiteSparse:GraphBLAS, if G->A is held by row (the\n default format), then computing G->in_degree is fastest if G->AT is known.\n If G->AT will be needed anyway, compute it first with LAGraph_Cached_AT, and\n then call LAGraph_Cached_Indegree.  This is optional; if G->AT is not known,\n then G->in_degree is computed from G->A instead.\n\n @param[in,out] G     graph for which G->in_degree is computed.\n @param[in,out] msg   any error messages.\n\n @retval GrB_SUCCESS if successful.\n @retval GrB_NULL_POINTER if G is NULL.\n @retval LAGRAPH_CACHE_NOT_NEEDED if G->kind is LAGraph_ADJACENCY_UNDIRECTED.\n @retval LAGRAPH_INVALID_GRAPH if G is invalid (G->A missing, or G->kind\n      not a recognized kind).\n @returns any GraphBLAS errors that may have been encountered."]
    pub fn LAGraph_Cached_InDegree(
        G: LAGraph_Graph,
        msg: *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " LAGraph_Cached_NSelfEdges: computes G->nself_edges, the number of diagonal\n entries that appear in the G->A matrix.  For an undirected or directed graph\n with an adjacency matrix G->A, these are the number of self-edges in G.  No\n work is performed it is already computed.\n\n @param[in,out] G     graph for which G->nself_edges is computed.\n @param[in,out] msg   any error messages.\n\n @retval GrB_SUCCESS if successful.\n @retval GrB_NULL_POINTER if G is NULL.\n @retval LAGRAPH_INVALID_GRAPH if G is invalid (G->A missing, or G->kind\n      not a recognized kind).\n @returns any GraphBLAS errors that may have been encountered."]
    pub fn LAGraph_Cached_NSelfEdges(
        G: LAGraph_Graph,
        msg: *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " LAGraph_Cached_EMin: computes the G->emin, the smallest entry in G->A.\n Not computed if G->emin already exists.\n\n @param[in,out] G     graph for which G->emin is computed.\n @param[in,out] msg   any error messages.\n\n @retval GrB_SUCCESS if successful.\n @retval GrB_NOT_IMPLEMENTED if G does not have a built-in real type:\n      GrB_(BOOL, INT8, INT16, INT32, INT64, UINT8, UINT16, UINT32, UINT64,\n      FP32, OR FP64).\n @retval GrB_NULL_POINTER if G is NULL.\n @retval LAGRAPH_INVALID_GRAPH if G is invalid (G->A missing, or G->kind\n      not a recognized kind).\n @returns any GraphBLAS errors that may have been encountered."]
    pub fn LAGraph_Cached_EMin(
        G: LAGraph_Graph,
        msg: *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " LAGraph_Cached_EMax: computes the G->emax, the largest entry in G->A.\n Not computed if G->emax already exists.\n\n @param[in,out] G     graph for which G->emax is computed.\n @param[in,out] msg   any error messages.\n\n @retval GrB_SUCCESS if successful.\n @retval GrB_NOT_IMPLEMENTED if G does not have a built-in real type:\n      GrB_(BOOL, INT8, INT16, INT32, INT64, UINT8, UINT16, UINT32, UINT64,\n      FP32, OR FP64).\n @retval GrB_NULL_POINTER if G is NULL.\n @retval LAGRAPH_INVALID_GRAPH if G is invalid (G->A missing, or G->kind\n      not a recognized kind).\n @returns any GraphBLAS errors that may have been encountered."]
    pub fn LAGraph_Cached_EMax(
        G: LAGraph_Graph,
        msg: *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " LAGraph_DeleteSelfEdges: removes any diagonal entries from G->A.  Most\n cached properties are cleared or set to LAGRAPH_UNKNOWN.  G->nself_edges is\n set to zero, and G->is_symmetric_structure is left unchanged.\n\n @param[in,out] G     graph for which G->A is modified.\n @param[in,out] msg   any error messages.\n\n @retval GrB_SUCCESS if successful.\n @retval GrB_NULL_POINTER if G is NULL.\n @retval LAGRAPH_INVALID_GRAPH if G is invalid (G->A missing, or G->kind\n      not a recognized kind).\n @returns any GraphBLAS errors that may have been encountered."]
    pub fn LAGraph_DeleteSelfEdges(
        G: LAGraph_Graph,
        msg: *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
